# django-CLI

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  build.rs
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: commands.rs  config.rs  django.rs  main.rs  utils.rs
src/cli/: mod.rs
src/cli/project/: config.rs  django.rs  files.rs  frontend.rs  mod.rs  options.rs  project.rs  setup.rs  structure.rs
src/cli/project/api/: rest.rs
src/cli/setup/: docker.rs  env.rs  git.rs  mod.rs  poetry.rs  setup.rs
src/commands/: init.rs
src/utils/: check.rs  command.rs  errors.rs  install.rs  mod.rs  modify_setting.rs  tools.rs  utils.rs
templates/project/: project_structure.tpl
templates/setup/: .gitignore.tpl  Dockerfile.tpl  README.md.tpl  env_template.tpl
