[package]
name = "django-cli"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.15", features = ["derive"] }
clap_derive = "4.5.13"
dialoguer = "0.11"
tera = "1.14.1"
tokio = { version = "1.39.2", features = ["full"] }
thiserror = "1.0.63"


[[bin]]
name = "django-cli"
path = "src/main.rs"